Added: higher authorization and login feature